Closed Bug 1457073 Opened 7 years ago Closed 7 years ago

Leak in WorkerEventTarget::Dispatch()

Categories

(Core :: DOM: Core & HTML, defect, P2)

58 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox61 --- fixed

People

(Reporter: baku, Assigned: baku)

References

Details

Attachments

(1 file)

WorkerEventTarget::Dispatch receives an already_AddRefed<nsIRunnable> parameter, but if mWorkerPrivate is null, it doesn't finish the moving of the runnable: https://searchfox.org/mozilla-central/rev/78dbe34925f04975f16cb9a5d4938be714d41897/dom/workers/WorkerEventTarget.cpp#101-110
Attachment #8971150 - Flags: review?(bugs)
Attachment #8971150 - Flags: review?(bugs) → review+
Priority: -- → P2
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/d50f31ee0a5b Fix a leak in WorkerEventTarget::Dispatch() about how already_AddRefed<> params are handled, r=smaug
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Blocks: 1456466
No longer depends on: 1456466
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: