Bug 1457073 - Fix a leak in WorkerEventTarget::Dispatch() about how already_AddRefed<> params are handled, r=smaug